Bug 89214 - Mailmerge: 4.4: loosing numbered and bulleted lists in target documents
Summary: Mailmerge: 4.4: loosing numbered and bulleted lists in target documents
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.1.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.0.0 target:4.4.3
Keywords: bibisected, bisected, regression
: 90125 90185 (view as bug list)
Depends on:
Blocks: 62364
  Show dependency treegraph
 
Reported: 2015-02-07 21:55 UTC by Peter Hartmann
Modified: 2016-06-12 19:48 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Hartmann 2015-02-07 21:55:18 UTC
Loosing details of document formating in 4.4.0 for MAC OS

on 4.2.8 it works well
Comment 1 Cor Nouws 2015-02-07 22:05:07 UTC
Hi Peter,

I confirm this issue on Linux.

To confirm:

1. simple database (biliography)
2. drag fields in document
3. add few paragraphs and give number
do mail merge and save result.

Is OK in 4.3.6.1: paragraphs still have list numbering in merged documents > regression.

thanks for filing!
Cor
Comment 2 Joe P. 2015-02-15 04:33:30 UTC
I tried this on Linux, version 4.2.7.2 and the formatting gets messed up there too. Also it appears to exist on Mac OS 4.3.5.2. I will try to see if I can get correct results in 4.3.6.1 (Linux) and 4.2.8 (Mac).
Comment 3 Joe P. 2015-02-17 05:26:32 UTC
Just an update. I did a bisect however in performing the bisect I ran into a minor problem. It seems that the final step "doing the mail merge and saving the result" failed in some of the tested versions. This was performed on 43-all, of the builds tested that worked, I did not encounter a problem with the formatting, yet. Anyway, the log below are the results that I got with a bisect and marking bad those builds which failed to write a mail-merge.

# bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect start 'latest' 'oldest'
# bad: [e02439a3d6297a1f5334fa558ddec5ef4212c574] source-hash-6b8393474974d2af7a2cb3c47b3d5c081b550bdb
git bisect bad e02439a3d6297a1f5334fa558ddec5ef4212c574
# good: [8f4aeaad2f65d656328a451154142bb82efa4327] source-hash-1885266f274575327cdeee9852945a3e91f32f15
git bisect good 8f4aeaad2f65d656328a451154142bb82efa4327
# good: [9995fae0d8a24ce31bcb5e9cd0459b69cfbf7a02] source-hash-8600bc24bbc9029e92bea6102bff2921bc10b33e
git bisect good 9995fae0d8a24ce31bcb5e9cd0459b69cfbf7a02
# good: [8ad82bc1416a07501651e8d96fe268e47d3931d3] source-hash-13821254f88d2c5488fba9fe6393dcf4ae810db4
git bisect good 8ad82bc1416a07501651e8d96fe268e47d3931d3
# bad: [d084d250b04446535ca1d7c29cf2062e6bd042b3] source-hash-688f72e3a2c3ef923389bbd21f6aea3afe1114db
git bisect bad d084d250b04446535ca1d7c29cf2062e6bd042b3
# bad: [013adf05b6bf8e5d44a4e820d43177d7fb749079] source-hash-a16a4006e40bdb2cb4671846295fe2bf5a856e68
git bisect bad 013adf05b6bf8e5d44a4e820d43177d7fb749079
# bad: [ff4b17247dc05a006a5c4c57dced132c87f2396c] source-hash-d74ba0c4147f33abd9d0c03883cc88f15e160ee5
git bisect bad ff4b17247dc05a006a5c4c57dced132c87f2396c
# bad: [54c7e3977148ffe7631292f2f7d6d60cf7c86bbc] source-hash-5ad95cec96f6f08c55bb226a6eaeb1eeb95c1279
git bisect bad 54c7e3977148ffe7631292f2f7d6d60cf7c86bbc
# bad: [891878bfdd77870aa99f3f9cc6ee6169c4d1c886] source-hash-ef4b5aad82da7133e89e37e3e04791398d6fb3a6
git bisect bad 891878bfdd77870aa99f3f9cc6ee6169c4d1c886
Comment 4 Matthew Francis 2015-02-21 13:49:33 UTC
Mail merge documents with numbering seem to have started losing the numbering as of the below commit

Adding Cc: to l.lunak@collabora.com; Could you possibly take a look at this? Thanks


commit bb00a0097900ae054401f7758a915047cfde4065
Author: Luboš Luňák <l.lunak@collabora.com>
Date:   Sat Nov 8 09:41:02 2014 +0100

    do not bother with nice unique names during mailmerge
    
    When using a single document for all the generating MM documents, there can
    be a significant number of sections/etc. , enough to make searching them
    all in order to find a next nice unique name take a noticeable time. Since
    it's very unlikely anybody will ever care about nice names after mailmerge,
    just get some unique name in a fast way.
    
    Change-Id: Id6b8d39a67529984cb93bb369f2c6eab401f1799
Comment 5 Matthew Francis 2015-03-22 04:42:52 UTC
*** Bug 90125 has been marked as a duplicate of this bug. ***
Comment 6 Jan-Marek Glogowski 2015-03-23 10:02:04 UTC
Add the blocker from the duplicate.
Comment 7 Commit Notification 2015-04-09 13:02:45 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ceafd0a76fb062237f627cd9d49d4aad78cf3066

tdf#89214 SwDoc::GetUniqueNumRuleName: always return pChkStr if it's unused

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2015-04-11 20:24:22 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=384880cb2e395e359b152c5afe7d8ba56c5249ff&h=libreoffice-4-4

tdf#89214 SwDoc::GetUniqueNumRuleName: always return pChkStr if it's unused

It will be available in 4.4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Robinson Tryon (qubit) 2015-12-17 08:46:25 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]
Comment 10 Caolán McNamara 2016-06-12 19:48:38 UTC
*** Bug 90185 has been marked as a duplicate of this bug. ***