tdf#89214 SwDoc::GetUniqueNumRuleName: always return pChkStr if it's unused

Regression from commit bb00a0097900ae054401f7758a915047cfde4065 (do not
bother with nice unique names during mailmerge, 2014-11-08),
SwAttrSet::CopyToModify() expects that in case SwDoc::FindNumRulePtr()
returns 0 for a name, then the call to SwDoc::MakeNumRule() will use the
not found name (as SwDoc::GetUniqueNumRuleName() will return the just
checked name).

As a result, simply always returning a random unique name during mail
merge is a problem. Only return a cheap random unique name if no hint is
given.

Unit test not backported, as the framework is missing in the 4.1-LHM.

Conflicts:
	sw/qa/extras/mailmerge/mailmerge.cxx

Change-Id: I49d65009ced97d00aa2e8db35a529f2f30ac9ae5