sw/source/core/doc/docnum.cxx
@@ -2216,13 +2216,13 @@ sal_uInt16 SwDoc::MakeNumRule( const String &rName,
 
 String SwDoc::GetUniqueNumRuleName( const String* pChkStr, bool bAutoNum ) const
 {
-    if( IsInMailMerge())
+    // If we got pChkStr, then the caller expects that in case it's not yet
+    // used, it'll be returned.
+    if( IsInMailMerge() && !pChkStr )
     {
         OUString newName = "MailMergeNumRule"
             + OStringToOUString( DateTimeToOString( DateTime( DateTime::SYSTEM )), RTL_TEXTENCODING_ASCII_US )
             + OUString::number( mpNumRuleTbl->size() + 1 );
-        if( pChkStr )
-            newName += *pChkStr;
         return newName;
     }
     String aName;
